--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-router": "^7.6.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
