--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/react-big-calendar": "^1.16.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
@@ -58,6 +61,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "sass": "^1.91.0",
     "storybook": "^9.0.17",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
