fix: Vercel 배포를 위한 경로 수정

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
@@ -30,5 +31,6 @@
       "@components/*": ["./src/components/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "vite-env.d.ts"],
+  "exclude": ["**/*.stories.*", "**/*.test.*", ".storybook/**", "src/stories/**"]
 }
