feature: Dashboard Daypicker 컴포넌트 작업

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -27,8 +27,8 @@
     /* shadcn UI */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "vite-env.d.ts"],
