--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-onboarding": "^9.0.17",
     "@storybook/addon-vitest": "^9.0.17",
     "@storybook/react-vite": "^9.0.17",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.0.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
