--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "vercel": "^47.0.1",
     "vite": "^6.3.5",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
