--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,29 +12,31 @@ services:
       MYSQL_USER: groupware
       MYSQL_PASSWORD: groupware123
     ports:
-      - "3307:3306"
+      - '3307:3306'
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - groupware-network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "groupware", "-pgroupware123"]
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost', '-u', 'groupware', '-pgroupware123']
       timeout: 20s
       retries: 10
 
   # Node.js 서버
   server:
     image: groupware-server:latest
-    build: .
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     container_name: groupware-server
     restart: unless-stopped
     ports:
-      - "3001:3001"
+      - '3001:3001'
     environment:
       NODE_ENV: production
-      DATABASE_URL: "mysql://groupware:groupware123@mysql:3306/groupware"
-      SHADOW_DATABASE_URL: "mysql://groupware:groupware123@mysql:3306/groupware_shadow"
+      DATABASE_URL: 'mysql://groupware:groupware123@mysql:3306/groupware'
+      SHADOW_DATABASE_URL: 'mysql://groupware:groupware123@mysql:3306/groupware_shadow'
     depends_on:
       mysql:
         condition: service_healthy
@@ -51,12 +53,12 @@ services:
   # React 프론트엔드
   client:
     build:
-      context: ../client
+      context: ./client
       dockerfile: Dockerfile
     container_name: groupware-client
     restart: unless-stopped
     ports:
-      - "3000:80"
+      - '3000:80'
     depends_on:
       - server
     networks:
