--- a/server/.env.development
+++ b/server/.env.development
@@ -1,3 +1,5 @@
 CLIENT_ORIGIN=http://localhost:5173
 PORT=3001
 NODE_ENV=development
+
+DATABASE_URL="mysql://portal:xtentia0905!@@116.125.140.55:3306/portal"
