--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -38,7 +40,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
-    "react-day-picker": "^9.8.0",
+    "react-datetime": "^3.3.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hotkeys-hook": "^5.1.0",
