feat: 프로필 작성 페이지 및 Popover 컴포넌트 제작
Select 컴포넌트 수정 및 Daypicker 컴포넌트 마이너한 수정 포함

--- a/client/.storybook/tsconfig.json
+++ b/client/.storybook/tsconfig.json
@@ -8,7 +8,11 @@
     "types": ["vite/client", "node"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"]
+    }
   },
   "include": ["../src/**/*.ts", "../src/**/*.tsx", "../src/**/*.mdx", "../src/**/*.stories.@(ts|tsx|js|jsx|mjs)", "./*.ts", "./*.tsx"]
 }
