--- a/server/.env
+++ b/server/.env
@@ -9,4 +9,4 @@ JWT_ACCESS_EXPIRES=1h      # 액세스 토큰 만료: 1시간
 JWT_REFRESH_EXPIRES=7d     # 리프레시 토큰 만료: 7일
 
 # DATABASE (Prisma)
-DATABASE_URL="mysql://name:password@host:3306/dbname"
+DATABASE_URL="mysql://portal:xtentia0905!@@116.125.140.55:3306/portal"
