feat: 온보딩 페이지 작업 완료

--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -8,6 +8,5 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "auto",
-  "bracketSameLine": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "bracketSameLine": true
 }
