--- a/server/.env.development
+++ b/server/.env.development
@@ -1,3 +1,5 @@
+# .env 파일 생성 필요
+
 # CORS
 CLIENT_ORIGIN=http://localhost:5173
 PORT=3001
@@ -8,5 +10,5 @@ JWT_SECRET=replace_with_long_random_secret
 JWT_ACCESS_EXPIRES=1h      # 액세스 토큰 만료: 1시간
 JWT_REFRESH_EXPIRES=7d     # 리프레시 토큰 만료: 7일
 
-# DATABASE (Prisma)
+# DATABASE (Prisma) 아래 내용으로 입력할 것
 DATABASE_URL="mysql://name:password@host:3306/dbname"
