--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.app.json && vite build --mode production",
+    "build:analyze": "ANALYZE=true tsc -p tsconfig.app.json && vite build --mode production",
+    "build:analyze:win": "set ANALYZE=true && tsc -p tsconfig.app.json && vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -85,6 +87,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "rollup-plugin-visualizer": "^6.0.3",
     "sass": "^1.91.0",
     "storybook": "^9.0.17",
     "tailwindcss": "^4.1.10",
