--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL = http://localhost:3001
+# VITE_API_BASE_URL = http://localhost:3001
+
+VITE_API_BASE_URL = http://gbend.cafe24.com
