--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 # VITE_API_BASE_URL = http://localhost:3001
 
-VITE_API_BASE_URL = http://gbend.cafe24.com
+VITE_API_BASE_URL = https://gbend.cafe24.com
