--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@rsagiev/gantt-task-react-19": "^0.3.9",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-big-calendar": "^1.16.2",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,9 @@
     "recharts": "^3.1.2",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "smart-webcomponents": "^24.0.22",
+    "smart-webcomponents-community": "^24.0.20",
+    "smart-webcomponents-react": "^24.0.20",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
