--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
