--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@rsagiev/gantt-task-react-19": "^0.3.9",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-big-calendar": "^1.16.2",
