--- a/client/package.json
+++ b/client/package.json
@@ -31,17 +31,13 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@rsagiev/gantt-task-react-19": "^0.3.9",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-big-calendar": "^1.16.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
-    "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
@@ -59,9 +55,6 @@
     "recharts": "^3.1.2",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
-    "smart-webcomponents": "^24.0.22",
-    "smart-webcomponents-community": "^24.0.20",
-    "smart-webcomponents-react": "^24.0.20",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
@@ -104,6 +97,7 @@
     "typescript-eslint": "^8.30.1",
     "vercel": "^47.0.1",
     "vite": "^6.3.5",
+    "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
