--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.62.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
+    "react-quill-new": "^3.6.0",
     "react-router": "^7.6.2",
     "react-syntax-highlighter": "^15.6.6",
     "react-wrap-balancer": "^1.1.1",
