--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react-datetime": "^3.3.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
