--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "smart-webcomponents-react": "^24.0.20",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
