--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.296",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-datetime": "^3.3.1",
