--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
@@ -73,6 +74,7 @@
     "smart-webcomponents-react": "^24.0.20",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
