--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^17.2.1",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.23.12",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.296",
@@ -88,6 +89,7 @@
     "@storybook/addon-vitest": "^9.0.17",
     "@storybook/react-vite": "^9.0.17",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^24.0.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
