--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,7 @@
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
