--- a/client/package.json
+++ b/client/package.json
@@ -79,6 +79,7 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
