feat: Production용 분기처리

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,4 @@
 # 만약 API도 Vercel에 같이 올리고 Serverless /api 라우트면
-VITE_API_BASE_URL=https://groupware-sigma.vercel.app/api
-VITE_CLIENT_ORIGIN=https://groupware-sigma.vercel.app/
+VITE_API_BASE_URL=https://gbend.cafe24.com
+VITE_CLIENT_ORIGIN=https://portal.pmgasia.co.kr/
+VITE_ENV=production
